<resources>
    <string name="app_name">Taipei Animal Park</string>
    <string name="app_bar_title">Taipei Animal Park</string>
    <string name="image_desc">image</string>
    <string name="default_message">wrong data!!!</string>
    <string name="waiting">waiting....</string>
    <string name="memo_default">No break information</string>
    <string name="open_url">Open url</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="about_me">about_me</string>
    <string name="plant_data">Plant Data</string>
    <string name="english_name">English Name</string>
    <string name="latin_name">Latin Name</string>
    <string name="alias">Alias</string>
    <string name="genus">Genus</string>
    <string name="family">Family</string>
    <string name="introduction">Introduction</string>
    <string name="feature">Feature</string>
    <string name="application">Application</string>
    <string name="update_time">Update Time</string>
</resources>
