<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp">

            <TextView
                android:id="@+id/nameChinese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textSize="18sp" />

            <TextView
                android:text="@string/english_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/nameEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/latin_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/nameLatin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/alsoKnown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/genus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/genus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/brief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/application"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp" />

            <TextView
                android:text="@string/update_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/updateDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textColor="@color/viewTextLightColor"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>